refactor: replace deprecated list access methods with more descriptive alternatives in AvaliacaoService and AvaliacaoServiceMedico